[LLES-159] デッキのコメント一覧取得機能を追加
